<resources>
    <string name="app_name">Calculate</string>
    <string name="txt_et_main_display">0</string>
    <string name="txt_btn_main_plus">+</string>
    <string name="txt_btn_main_minus">-</string>
    <string name="txt_btn_main_multiply">*</string>
    <string name="txt_btn_main_divide">/</string>
    <string name="txt_btn_main_one">1</string>
    <string name="txt_btn_main_two">2</string>
    <string name="txt_btn_main_three">3</string>
    <string name="txt_btn_main_four">4</string>
    <string name="txt_btn_main_five">5</string>
    <string name="txt_btn_main_six">6</string>
    <string name="txt_btn_main_seven">7</string>
    <string name="txt_btn_main_eight">8</string>
    <string name="txt_btn_main_nine">9</string>
    <string name="txt_btn_main_zero">0</string>
    <string name="txt_btn_main_clear">C</string>
    <string name="txt_btn_main_equal">=</string>
</resources>
