<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hammer.calc.MainActivity">

    <EditText
        android:id="@+id/et_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_display"
        android:hint="@string/txt_et_main_display"
        />
    <Button
        android:id="@+id/btn_main_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/txt_btn_main_seven"
        android:layout_below="@id/et_display"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_main_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/txt_btn_main_four"
        android:layout_below="@id/btn_main_seven"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_main_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_four"
        android:layout_marginBottom="2dp"
        android:text="@string/txt_btn_main_one"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_main_zero"
        android:width="178dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_one"
        android:text="@string/txt_btn_main_zero"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_main_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_display"
        android:text="@string/txt_btn_main_eight"
        android:layout_toRightOf="@id/btn_main_seven"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_display"
        android:layout_toRightOf="@id/btn_main_eight"
        android:text="@string/txt_btn_main_nine"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_main_eight"
        android:layout_toRightOf="@id/btn_main_four"
        android:text="@string/txt_btn_main_five"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_nine"
        android:layout_toRightOf="@id/btn_five"
        android:text="@string/txt_btn_main_six"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_five"
        android:layout_toRightOf="@id/btn_main_one"
        android:text="@string/txt_btn_main_two"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_six"
        android:layout_toRightOf="@id/btn_two"
        android:text="@string/txt_btn_main_three"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_value"
        />
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_three"
        android:layout_toRightOf="@id/btn_main_zero"
        android:layout_marginBottom="2dp"
        android:text="@string/txt_btn_main_clear"
        android:background="@drawable/background_button_operation"
        />
    <Button
        android:id="@+id/btn_main_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_multiply"
        android:layout_below="@+id/btn_main_devide"
        android:layout_toRightOf="@id/btn_six"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_operation"
        />
    <Button
        android:id="@+id/btn_main_devide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_divide"
        android:layout_below="@id/et_display"
        android:layout_toRightOf="@id/btn_nine"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_operation"
        />
    <Button
        android:id="@+id/btn_main_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_plus"
        android:layout_below="@+id/btn_main_minus"
        android:layout_toRightOf="@id/btn_clear"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button_operation"
        />
    <Button
        android:id="@+id/btn_main_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_minus"
        android:layout_below="@id/btn_main_multiply"
        android:layout_toRightOf="@id/btn_three"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_button_operation"
        />
    <Button
        android:id="@+id/btn_equals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_main_zero"
        android:text="@string/txt_btn_main_equal"
        android:padding="10dp"
        android:background="@drawable/background_button_operation"
        />
    <ImageButton
        android:background="@mipmap/ic_launcher"
        android:layout_below="@id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
